mdapi_temp_dir/objects/Account_Role__c.object
<CustomObject>
    <label>Account Role</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Account Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Bidding</fullName>
                </value>
                <value>
                    <fullName>Under Contract</fullName>
                </value>
                <value>
                    <fullName>Not Selected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Roles</relationshipLabel>
        <relationshipName>Account_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Construction_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Construction Job</label>
        <referenceTo>Construction_Job__c</referenceTo>
        <relationshipLabel>Account Roles</relationshipLabel>
        <relationshipName>Account_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Discipline__c</fullName>
        <label>Role/Discipline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>